Relocated neo4j directory one step deeper to allow restore to work without problems

--- a/backend/src/main/docker/application.conf.tmpl
+++ b/backend/src/main/docker/application.conf.tmpl
@@ -4,7 +4,7 @@
 extendedmind {
   version = ${project.version}
   neo4j {
-    storeDir = "/var/extendedmind/neo4j"
+    storeDir = "/var/extendedmind/backend/neo4j"
 
     {{if exists "/extendedmind/ha"}}
     isHighAvailability = true
