--- a/backend/src/main/docker/neo4j.properties.tmpl
+++ b/backend/src/main/docker/neo4j.properties.tmpl
@@ -1,10 +1,13 @@
 online_backup_enabled=true
 online_backup_server=0.0.0.0:6362
 
-{{if exists "/extendedmind/ha"}}
+{{if exists "/extendedmind/ha"}}{{$ip_key := printf "/extendedmind/backend/hosts/%s" (getenv "HOST_IP")}}
+{{if exists (printf "%s" $ip_key)}}
+ha.cluster_name=extendedmind
 ha.server_id={{getenv "HOST_ID"}}
-ha.cluster_server={{getenv "COREOS_PRIVATE_IPV4"}}:5001
-ha.server={{getenv "COREOS_PRIVATE_IPV4"}}:6001
-{{$servers := getvs "/extendedmind/servers/*"}}
-ha.initial_hosts={{join $servers ":5001,"}}:5001
+ha.cluster_server={{printf "%s" $ip_key | getv}}:5001
+ha.server={{printf "%s" $ip_key | getv}}:6001
+{{$hosts := getvs "/extendedmind/backend/hosts/*"}}
+ha.initial_hosts={{join $hosts ":5001,"}}:5001
+{{end}}
 {{end}}
