Untested email verification process, possibility to resend verification email. Added emailVerified to test users, excpet info@ext.md. Moved terms.html and privacy.html to static/ folder for easier setup.

--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -146,6 +146,10 @@ Use `.text-details` to separate details from body text.
   color: @color-text-downplayed;
 }
 
+.text-danger {
+  color: @color-text-error;
+}
+
 .text-error {
   font-size: @size-font-small;
   color: @color-text-error;
