Untested version of account deletion

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -51,7 +51,8 @@ Background colors
 @color-background-btn-active: #0f82fe;
 @color-background-btn-pressed: #0171ea;
 @color-background-btn-disabled: lighten(#b0b0b6, 20%); // TODO: don't use lighten
-
+@color-background-btn-danger-active: @color-text-error;
+@color-background-btn-danger-pressed: lighten(@color-text-error, 20%);
 
 /*
 **************************************************************************
