--- a/frontend/site/docker/site-config.js.tmpl
+++ b/frontend/site/docker/site-config.js.tmpl
@@ -1,5 +1,5 @@
 module.exports = {
   port: 3000,
   externalStatic: true,
-  backendUrlPrefix: '{{getv "/extendedmind/site/backendurlprefix"}}'
+  backendCollective: '{{getv "/extendedmind/site/backendcollective"}}'
 };
