Use Nunjucks 2 directly instead of co-views. Disable verbose logging in production, and use template caching without watching for template changes.

--- a/frontend/site/docker/site-config.js.tmpl
+++ b/frontend/site/docker/site-config.js.tmpl
@@ -1,5 +1,6 @@
 module.exports = {
   port: 3000,
   externalStatic: true,
+  debug: false,
   backendCollective: '{{getv "/extendedmind/site/backendcollective"}}'
 };
