--- a/frontend/app/src/static/less/typography.less
+++ b/frontend/app/src/static/less/typography.less
@@ -223,6 +223,7 @@ Navigation texts
 
 .text-navigation-back,
 .text-navigation-forward,
+.text-expand,
 .text-expand-up,
 .text-expand-down,
 .text-navigation {
