Fixed 12 hour events on Android sometimes breaking layout

--- a/frontend/app/src/static/less/widgets.less
+++ b/frontend/app/src/static/less/widgets.less
@@ -816,6 +816,11 @@ TODO: Example needed
   width: 81px;      // [1]
 }
 
+.android .twelve-hour-time .group-mixed .group-mixed--left {
+  min-width: 82px;  // [1]
+  width: 82px;      // [1]
+}
+
 // 1. Make some more room for text inside .group-mixed--left.
 // 1. With twelwe-hour time, align text to right.
 .twelve-hour-time .agenda .group-mixed--left {
