--- a/frontend/site/docker/site-config.js.tmpl
+++ b/frontend/site/docker/site-config.js.tmpl
@@ -2,5 +2,6 @@ module.exports = {
   port: 3000,
   externalStatic: true,
   debug: false,
+  backend: true,
   backendCollective: '{{getv "/extendedmind/site/backendcollective"}}'
 };
