Added active context to the menu and added possibility to favorite contexts

--- a/frontend/app/src/static/less/layout.less
+++ b/frontend/app/src/static/less/layout.less
@@ -137,6 +137,15 @@ Menu
   }
 }
 
+.container-menu--extras{
+  .group-mixed:first-child {
+    padding-top: 5px;
+  }
+  .group-mixed:last-child {
+    padding-bottom: 5px;
+  }
+}
+
 .container-menu--bottom, .container-menu--push {
   height: @height-menu-footer;
 }
@@ -1461,7 +1470,6 @@ textarea#ignoreSnap.disable-full-height.input-separate {
   float: left;
   padding-top: @padding-vertically-centered;
   padding-bottom: @padding-vertically-centered;
-  padding-left: @grid-horizontal;
 }
 .text-prefixed--outer {
   overflow: hidden;
