Made footer bigger for three column mode, now settings, + and editor footer are all lined nicely

--- a/frontend/app/src/static/less/foundation.less
+++ b/frontend/app/src/static/less/foundation.less
@@ -55,6 +55,12 @@ Background colors
 @color-background-btn-danger-pressed: lighten(@color-text-error, 20%);
 
 /*
+Other colors
+*/
+
+@color-border-light: #eaeaea;
+
+/*
 **************************************************************************
 # Mixins
 
