--- a/frontend/app/src/static/less/typography.less
+++ b/frontend/app/src/static/less/typography.less
@@ -390,6 +390,13 @@ Search results (omnibar, deleted)
   }
 }
 
+@media (min-width: @min-width-three-column) {
+  .container-content--after > .group-symmetrical > .group-symmetrical--right > .text-field--label {
+    padding-top: 25px;
+    padding-bottom: 0;
+  }
+}
+
 // FIXME: merge with .text-search-result
 .text-field--title {
   line-height: @line-height-text-search; // [1]
