--- a/frontend/app/src/static/less/animations.less
+++ b/frontend/app/src/static/less/animations.less
@@ -508,6 +508,14 @@ input[type="checkbox"]:checked + label:before {
   animation:         modal-fade-scale ease-in-out .25s;
 }
 
+// 1. Modal anchored to element sets position in JavaScript.
+.modal-fade-scale-anchored {
+  -webkit-animation:  modal-fade-scale-anchored ease-in-out .25s; // [1]
+  -moz-animation:     modal-fade-scale-anchored ease-in-out .25s; // [1]
+  -o-animation:       modal-fade-scale-anchored ease-in-out .25s; // [1]
+  animation:          modal-fade-scale-anchored ease-in-out .25s; // [1]
+}
+
 @-webkit-keyframes modal-fade-scale {
   0%   {
     opacity: 1;
@@ -569,8 +577,72 @@ input[type="checkbox"]:checked + label:before {
   }
 }
 
+@-webkit-keyframes modal-fade-scale-anchored {
+  0%   {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.5;
+  }
+  50%   {
+    opacity: 1;
+    -webkit-transform: scale(.9);
+  }
+  100%   {
+    -webkit-transform: scale(1);
+  }
+}
+
+@-moz-keyframes modal-fade-scale-anchored {
+  0%   {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.5;
+  }
+  50%   {
+    opacity: 1;
+    -moz-transform: scale(.9);
+  }
+  100%   {
+    -moz-transform: scale(1);
+  }
+}
+
+@-o-keyframes modal-fade-scale-anchored {
+  0%   {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.5;
+  }
+  50%   {
+    opacity: 1;
+    -o-transform: scale(.9);
+  }
+  100%   {
+    -o-transform: scale(1);
+  }
+}
+
+@keyframes modal-fade-scale-anchored {
+  0%   {
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.5;
+  }
+  50%   {
+    opacity: 1;
+    transform: scale(.9);
+  }
+  100%   {
+    transform: scale(1);
+  }
+}
+
 // Fade out end.
-// Fade in end.
+// Fade in start.
 .animate-modal.ng-leave.ng-leave-active,
 .animate-modal.ng-enter {
   -webkit-transform: scale(.9) translateY(-50%);
@@ -581,8 +653,8 @@ input[type="checkbox"]:checked + label:before {
   opacity: 0;
 }
 
-
 // 1. Blur backdrop. See http://tympanus.net/codrops/2011/12/14/item-blur-effect-with-css3-and-jquery/
+// 2. Focus active element.
 .blur {
   &,
   span, span:after,
@@ -615,6 +687,12 @@ input[type="checkbox"]:checked + label:before {
   textarea {
     text-shadow: 0px 0px 10px rgba(51, 51, 51, 0.9);
     color: rgba(51, 51, 51, 0) !important;
+  }
+  & .active {
+    &, * {
+      text-shadow: none;        // [2]
+      color: white !important;  // [2]
+    }
   }
 }
 
