Larger heading font also to task/context page

--- a/frontend/app/src/static/less/typography.less
+++ b/frontend/app/src/static/less/typography.less
@@ -460,7 +460,7 @@ Search results (omnibar, deleted)
 
 // For desktop, make editor heading larger, including prefix label
 @media (min-width: @min-width-three-column) {
-  .text-heading-primary.large, .text-prefixed--label.large {
+  .text-heading-primary.large, .text-prefixed--label.large, .text-heading.long {
     font-size: @size-font-large;
     line-height: (@grid-vertical + 6px);
   }
